bot_logs.txt
  File "/home/runner/work/security-monitor-bot/security-monitor-bot/writeup-watcher-v6.py", line 203
    with open(CACHE_FILE, 'r') as fileavond
                                           ^
SyntaxError: expected ':'
